# trainingApp

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .env.example  .env.remote  .env.test  .gitignore  Cargo.toml  Dockerfile  deploy-arch.sh  deploy.sh  docker-compose.yml
backend/frontend/: README.md
backend/migrations/: 001_initial_schema.sql
backend/src/: lib.rs  main.rs  seeding.rs  state.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/handlers/: auth.rs  exercise_types.rs  exercises.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: exercise.rs  exercise_type.rs  mod.rs  user.rs
backend/tests/: auth_tests.rs  exercise_types_tests.rs  exercises_tests.rs
backend/tests/common/: mod.rs
src/: Cargo.toml
training_app_mobile/: MOBILE_INSTALLATION.md  README.md  pubspec.yaml
training_app_mobile/android/app/: build.gradle.kts
training_app_mobile/ios/Runner/: Info.plist
training_app_mobile/ios/Runner.xcodeproj/: project.pbxproj
training_app_mobile/lib/: main.dart
training_app_mobile/lib/database/: database.dart  database.g.dart  database_connection.dart  database_connection_mobile.dart  database_connection_stub.dart  database_connection_web.dart
training_app_mobile/lib/models/: exercise.dart  exercise_type.dart  user.dart
training_app_mobile/lib/providers/: auth_provider.dart  exercise_provider.dart  settings_provider.dart
training_app_mobile/lib/screens/: create_exercise_screen.dart  create_exercise_type_screen.dart  exercise_types_screen.dart  exercises_screen.dart  home_screen.dart  login_screen.dart  register_screen.dart  (+1 more)
training_app_mobile/linux/: CMakeLists.txt
training_app_mobile/test/: widget_test.dart
training_app_mobile/web/: index.html  manifest.json
training_app_mobile/windows/: CMakeLists.txt
(+17 files in other folders)
