[package]
name = "training_app_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde-human-readable"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
axum-test = "15.0"
serde_json = "1.0"
